# test_cam

./: .env  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
api_generator/data/: frames.json  users.json
api_generator/settings/: core.py
api_generator/src/fake_models/: user.py
app/: Dockerfile  requirements.txt  uwsgi.ini
app/config/: models.py  paginators.py  permissions.py  serializers.py  session.py  settings.py  urls.py
app/config/components/: base.py  database.py  local.py
app/frame/: apps.py  models.py  serializers.py  validators.py
app/frame/api/: urls.py
app/frame/api/v1/: responses.py  urls.py  views.py
app/frame/migrations/: 0001_initial.py  0002_initial.py
app/user/: authentication.py  models.py  serializers.py
app/user/api/: urls.py
app/user/api/v1/: responses.py  urls.py  (+1 more)
app/user/migrations/: 0001_initial.py
data_generator/: Dockerfile  main.py  requirements.txt  settings.py
data_generator/runs/: __init__.py  frames.py  user_logins.py  users.py
data_generator/schemas/: frames.json  user_logins.json
data_generator/src/fake_models/: frame.py  user.py
data_generator/src/generator/: base.py  frame.py  user.py  user_logins.py
db/: app.sqlite  test.sqlite
nginx/configs/: app.conf
nginx/static/log/: access_log  error_log
tests/: Dockerfile  requirements.txt
tests/functional/: conftest.py  settings.py
tests/functional/src/: test_create_frame.py  test_frame.py  test_frame_detail.py  test_list_frames.py  test_user.py  test_user_frame.py  test_user_login.py  test_user_registration.py
tests/functional/testdata/: user.json  user_frame.json
(+16 files in other folders)
